# cebra

./: .gitignore  CMakeLists.txt  README.md  todo.txt
examples/: arithmetic.cebra  interpreter.cbr  interpreter_new_syntax.cbr
examples/docs/: about.html  built_in_types.html  cebra.html  cebra_docs.html  cebra_docs_template.html  cebra_styles.css  compile_docs.cbr  compiled_docs.html  control_flow.html  coroutines.html  enums.html  extending_cebra.html  final_docs.html  functions.html  getting_started.html  highlight_syntax.cbr  libraries.html  lists_maps.html  modules.html  (+2 more)
src/: .ast.h.swp  .chunk.c.swp  .common.h.swp  .compiler.c.swp  .compiler.h.swp  .main.c.swp  .memory.c.swp  .memory.h.swp  .obj_string.c.swp  .parser.c.swp  .parser.h.swp  .sig.c.swp  .todo.txt.swp  .value.c.swp  .value_array.c.swp  .vm.c.swp  CMakeLists.txt  ast.c  ast.h  ast_printer.c  ast_printer.h  ast_typer.c  ast_typer.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  decl_list.c  decl_list.h  error.h  lexer.c  lexer.h  main.c  memory.c  memory.h  native.h  node_list.c  node_list.h  obj.c  (+31 more)
src/build-vscode/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
src/build-vscode/.cmake/api/v1/reply/: cache-v2-bcb26e8474f131a590ea.json  codemodel-v2-07c2b0cf88a4a8e67108.json  index-2021-10-17T04-28-51-0808.json  target-Cebra-Debug-b5c83dfcb62f6837dd3f.json  toolchains-v1-c4f8a5f97f4193bce31b.json
tests/: .correctness.cbr.swp  correctness.cbr  dog.cbr  fib.cbr  interpreter.cbr  invalid_tests.cbr  math.cbr  parse_block.cbr  parse_calls.cbr  parse_for_while.cbr  parse_if_else.cbr  parse_var_decl.cbr  sandbox.cbr  stack.cbr  test.py  test2.py
(+6 files in other folders)
