set(Sources
    obj.c
    table.c
    main.c
    memory.c
    token.c
    sig.c
    value.c
    lexer.c
    parser.c
    ast.c
    value_array.c
    chunk.c
    compiler.c
    vm.c
    )

set(Headers
    obj.h
    table.h
    result_code.h
    common.h
    memory.h
    token.h
    sig.h
    value.h
    lexer.h
    parser.h
    ast.h
    value_array.h
    chunk.h
    compiler.h
    vm.h
    )

add_executable(
    Cebra
    ${Headers}
    ${Sources}
    )
